--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@convex-dev/better-auth": "^0.9.7",
     "@convex-dev/react-query": "0.0.0-alpha.11",
+    "@octokit/request": "^10.0.6",
+    "@octokit/types": "^16.0.0",
+    "@openrouter/ai-sdk-provider": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -27,11 +31,14 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
+    "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "ai": "^5.0.89",
+    "better-auth": "1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.27.3",
+    "convex": "^1.28.2",
     "diff": "^8.0.2",
     "gitdiff-parser": "^0.3.1",
     "highlight.js": "^11.11.1",
