--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "db:generate": "dotenv -e .env.local -- prisma generate",
+    "db:push": "dotenv -e .env.local -- prisma db push",
+    "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "db:studio": "dotenv -e .env.local -- prisma studio",
+    "db:seed": "dotenv -e .env.local -- prisma db seed"
   },
   "dependencies": {
-    "@convex-dev/better-auth": "^0.9.7",
-    "@convex-dev/react-query": "0.0.0-alpha.11",
     "@octokit/request": "^10.0.6",
     "@octokit/types": "^16.0.0",
     "@openrouter/ai-sdk-provider": "^1.2.1",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -38,11 +42,12 @@
     "better-auth": "1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.28.2",
     "diff": "^8.0.2",
+    "dotenv-cli": "^10.0.0",
     "gitdiff-parser": "^0.3.1",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.544.0",
+    "prisma": "^6.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
